@@ -92,6 +92,13 @@ for EasyVision and Pronounceable passwords can not be overriden in either case.
 <td>An entry's password exipry date is set or cleared directly rather than using
 the Set and Clear buttons after changing values.</td>
 </tr>
+<tr>
+<td align="center" width="100">n/a</td>
+<td>
+The default password generation policy is now for 12 character
+passwords that include symbol characters (previous default was 8, no
+symbols).</td>
+</tr>
 </tbody>
 </table>
 <h4><a name="V3.25.1BugsFixed"></a>Bugs fixed in V3.25.1</h4>
